# Monitoring_clarisse

./: CMakeLists.txt  Makefile  README.md  TreeTopology  available_metrics.c  available_metrics.h  cod.c  cod.h  evp_monitoring.c  evp_monitoring.h  helpers.c  helpers.h  maggs_types.h  metric_type.c  metric_type.h  metrics_aggregator.c  metrics_aggregator.h  metrics_crawler.c  metrics_crawler.h  monitoring_system_interface.c  monitoring_system_interface.h  script.pbs  storage.c  storage.h  test.c
MPI/: Makefile  available_metrics.h  metrics_aggregator  metrics_aggregator.c  metrics_aggregator.h  metrics_crawler.h  storage.h
MPI/input_files/: file.txt  file50.txt  file500.txt
MPI/resultsMPI/: plot_script.sh  res_7nodes_2degree_10
MPI/resultsMPI/100ms/metrici_var/evpath/: metrics_var  plot_script.sh  results_55nodes_2degree_150file.txt  results_55nodes_2degree_150file100.txt  results_55nodes_2degree_150file200.txt  results_55nodes_2degree_150file300.txt  results_55nodes_2degree_150file400.txt  results_55nodes_2degree_150file50.txt  results_55nodes_2degree_150file500.txt
MPI/resultsMPI/100ms/noduri_var/: nodes_variable  plot_script.sh  res_35nodes_2degree_50file.txt
MPI/resultsMPI/100ms/noduri_var/200metrici/: 15  25  35  45  5  55  nodes_variable  plot_15.sh  plot_25.sh  plot_35.sh  plot_45.sh  plot_5.sh  plot_55.sh  plot_script.sh  res_15nodes_2degree_50file200.txt  res_25nodes_2degree_50file200.txt  res_35nodes_2degree_50file200.txt  res_45nodes_2degree_50file200.txt  res_55nodes_2degree_50file200.txt  res_5nodes_2degree_50file200.txt
MPI/resultsMPI/100ms/noduri_var/200metrici/evpath/: results_15nodes_2degree_50  results_25nodes_2degree_50  results_35nodes_2degree_50  results_45nodes_2degree_50  results_55nodes_2degree_50  results_5nodes_2degree_50
MPI/resultsMPI/100ms/noduri_var/evpath/: nodes_variable  results_10nodes_2degree_50  results_15nodes_2degree_50  results_20nodes_2degree_50  results_25nodes_2degree_50  results_30nodes_2degree_50  results_35nodes_2degree_50  results_40nodes_2degree_50  results_45nodes_2degree_50  results_50nodes_2degree_50  results_55nodes_2degree_50  results_5nodes_2degree_50
MPI/resultsMPI/100ms/noduri_var/resultsMPI/: res_15nodes_2degree_50file.txt  res_25nodes_2degree_50file.txt  res_45nodes_2degree_50file.txt  res_55nodes_2degree_50file.txt  res_5nodes_2degree_50file.txt
MPI/resultsMPI/resultsMPI/: res_55nodes_2degree_150file200.txt  res_55nodes_2degree_150file400.txt
MPI/running_scripts/: run_degree_var.sh  run_metrics_var.sh  run_nodes_var.sh
include/: cmrpc.h  comm_group2.h  echo2.h  get_clock.h  gs_ev.h  lgs.h  lgscommlib.h  lgsdatastructs.h  pdsdefs.h
input_files/: file.txt  file100.txt  file200.txt  file2_nopapi.txt  file300.txt  file400.txt  file50.txt  file500.txt  file_mem_500.txt
lib/: libatl.la  libatl.so.2  libatl.so.2.0.16  libbench.la  libbench.so.0.0.0  libcercs_env.la  libcercs_env.so.1  libcercs_env.so.1.0.56  libcmrpc.la  libcommgrp.la  libcommlgs.la  libcommlgs.so.0  libcommlgs.so.0.0.0  libdill.la  libdill.so.2  libdill.so.2.1.18  libenet.la  libenet.so.2  libenet.so.2.4.0  libevpath.la  libevpath.so.4  libevpath.so.4.0.128  libffs.la  libffs.so.1  libffs.so.1.1.229  libgs.la  libgs.so.0  libgs.so.0.0.0  libgs2.la  libgs2.so.0.0.0  libpdsagent.la
lib/cmake/EVPath/: EVPathConfig.cmake  EVPathConfigVersion.cmake  EVPathTargets-relwithdebinfo.cmake  EVPathTargets.cmake
lib/pkgconfig/: libenet.pc  libenet.pc~
